@@ -1,3 +1,5 @@
+20080530
+	issue 91: _declspec changed to __declspec in Nt files
 20080529
 	limbo/stubs.c: allow pick adt types
 20080528
